--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vlaamsche Reus Haarlem</title>
-    <meta name="Description" content="Wanneer u trek heeft in iets lekkers gaat u natuurlijk naar de Vlaamsche Reus Haarlem voor de lekkerste snacks en échte Vlaamse friet! Ook glutenvrije snacks." />
-    <meta name="Keywords" content="Vlaamse friet, Vlaamsche Friet, De Vlaamsche reus Haarlem, vlaamsche reus patat, Haarlem friet, lekkerste hamburger in Haarlem" />
+    <meta name="Description"
+        content="Wanneer u trek heeft in iets lekkers gaat u natuurlijk naar de Vlaamsche Reus Haarlem voor de lekkerste snacks en échte Vlaamse friet! Ook glutenvrije snacks." />
+    <meta name="Keywords"
+        content="Vlaamse friet, Vlaamsche Friet, patat haarlem, snackbar haarlem, bestellen haarlem, eten bestellen haarlem, eten afhalen haarlem, De Vlaamsche reus Haarlem, vlaamsche reus patat, Haarlem friet, lekkerste hamburger in Haarlem" />
     <link href="/assets/css/bootstrap.css" rel="stylesheet" />
-    <link href="/assets/css/allcss.css" rel="stylesheet" />
-    <link href="/assets/css/layout.css" rel="stylesheet" />
-    <link href="/assets/css/cGFnaW5hfHBhZ2luYV9pZC0xfHBhZ2Vjc3M=.css" rel="stylesheet" />
     <link href="/assets/css/website-opmaak.css" rel="stylesheet" />
 </head>
 
@@ -19,50 +18,43 @@
     <header>
         <div class="logotop">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12 col-md-12">
                     <a href="/"><img src="/assets/images/Vlaamse-friet-haarlem.png"></a>
                 </div>
             </div>
         </div>
     </header>
+
     <body>
         <div class="container">
-            <div class="row footerinhoud">
-
-                <div class="col-md-3 logo">
-                    <p>Bestel via:</p>
-                    <hr style="border-top: 1px solid #E31E24;" />
-                    <p>&nbsp;</p>
-                    <p>
-                        <a href="https://deliveroo.nl/nl/menu/haarlem/haarlem/de-vlaamsche-reus" target="_blank"><img src="/assets/images/deliveroo.png" alt="vlaamschereushaarlem" height="44" /></a>
-                    </p>
-                    <p>&nbsp;</p>
-                    <p>
-                        <a href="https://www.ubereats.com/nl-NL/amsterdam/food-delivery/de-vlaamsche-reus/qLt01sQ2StebXGq_81f7QA/" target="_blank"><img src="/assets/images/ubereats.png" alt="vlaamschereushaarlem" height="44" /></a>
-                    </p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;
-                        <br />
-                        <br />
-                    </p>
-                    <p><span style="font-size: 8pt;">&copy; 2017 Vlaamsche Reus</span></p>
+            <div class="row">
+                <div class="col-lg-4">
+                    <h1>Bestel via</h1>
+                    <ul>
+                        <li>
+                            <a href="https://deliveroo.nl/nl/menu/haarlem/haarlem/de-vlaamsche-reus" target="_blank"><img
+                                src="/assets/images/deliveroo.png" alt="vlaamschereushaarlem" height="44" /></a>
+                        </li>
+                        <li>
+                            <a href="https://www.ubereats.com/nl-NL/amsterdam/food-delivery/de-vlaamsche-reus/qLt01sQ2StebXGq_81f7QA/"
+                            target="_blank"><img src="/assets/images/ubereats.png" alt="vlaamschereushaarlem"
+                                height="44" /></a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-3 adres">
-                    <p>Contactgegevens:</p>
-                    <hr style="border-top: 1px solid #E31E24;" />
-                    <p>Vlaamsche Reus</p>
-                    <p>Nieuwstraat 6
-                        <br />2011 GH Haarlem</p>
-                    <p>023- 54 24 646
-                        <br /><a title="contactformulier de  Vlaamsche Reus" href="http://www.vlaamschereus-haarlem.nl/contact">info(at)vlaamschereus-haarlem.nl<br /></a>&nbsp;</p>
-                    <p><span style="font-size: 12pt;">KvK: <span style="font-size: 10pt;">34239266</span></span>
-                    </p>
+                <div class="col-lg-4">
+                    <h1>Contactgegevens</h1>
+                    <ul>
+                        <li>De Vlaamsche Reus</li>
+                        <li>Nieuwstraat 6</li>
+                        <li>2011 GH Haarlem</li>
+                        <li>023 - 542 46 46</li>
+                        <li>KvK: 34239266</li>
+                    </ul>
                 </div>
-                <div class="col-md-3 openingstijden">
-                    <p>Openingstijden:</p>
-                    <hr style="border-top: 1px solid #E31E24;" />
-                    <p>&nbsp;</p>
-                    <table style="height: 111px;" width="298">
+                <div class="col-lg-4">
+                    <h1>Openingstijden</h1>
+                    <table class="table borderless">
                         <tbody>
                             <tr>
                                 <td>Maandag</td>
@@ -109,20 +101,8 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
+            <footer>&copy; 2020 De Vlaamsche Reus VOF</footer>
         </div>
-            <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-            <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-            <script src="/js/jquery.js"></script>
-            <script src="/js/jquery-ui.js"></script>
-            <script src="/js/bootstrap.js"></script>
-            <script src="/js/smartmenus.js"></script>
-            <script src="/js/appear.js"></script>
-            <script src="/js/functies.js"></script>
-</body>
-
+    </body>
 </html>
