--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
                     <ul>
                         <li>
                             <a href="https://deliveroo.nl/nl/menu/haarlem/haarlem/de-vlaamsche-reus" target="_blank"><img
-                                src="/assets/images/deliveroo-tr-small.png" alt="vlaamschereushaarlem" height="44" /></a>
+                                src="/assets/images/deliveroo-tr-small.png" alt="vlaamschereus haarlem deliveroo" height="50" /></a>
                         </li>
                         <li>
                             <a href="https://www.ubereats.com/nl-NL/amsterdam/food-delivery/de-vlaamsche-reus/qLt01sQ2StebXGq_81f7QA/"
-                            target="_blank"><img src="/assets/images/ubereats.png" alt="vlaamschereushaarlem"
-                                height="44" /></a>
+                            target="_blank"><img src="/assets/images/ubereats.png" alt="vlaamschereus haarlem ubereats"
+                                height="50" /></a>
+                        </li>
+                        <li>
+                            <a href="https://www.thuisbezorgd.nl/de-vlaamsche-reus"
+                            target="_blank"><img src="/assets/images/thuisbezorgdnl-logo-oranje-klein.png" alt="vlaamschereus haarlem thuisbezorgd"
+                                height="50" /></a>
                         </li>
                     </ul>
                 </div>
@@ -58,45 +63,45 @@
                         <tbody>
                             <tr>
                                 <td>Maandag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
                                 <td>19.00</td>
                             </tr>
                             <tr>
                                 <td>Dinsdag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
                                 <td>19.00</td>
                             </tr>
                             <tr>
                                 <td>Woensdag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
                                 <td>19.00</td>
                             </tr>
                             <tr>
                                 <td>Donderdag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
                                 <td>20.00</td>
                             </tr>
                             <tr>
                                 <td>Vrijdag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
-                                <td>19.00</td>
+                                <td>20.00</td>
                             </tr>
                             <tr>
                                 <td>Zaterdag</td>
-                                <td>11.00</td>
+                                <td>12.00</td>
                                 <td>-</td>
-                                <td>19.00</td>
+                                <td>20.00</td>
                             </tr>
                             <tr>
                                 <td>Zondag</td>
                                 <td>12.00</td>
                                 <td>-</td>
-                                <td>19.00</td>
+                                <td>20.00</td>
                             </tr>
                         </tbody>
                     </table>
