--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                             target="_blank"><img src="/assets/images/thuisbezorgdnl-logo-oranje-klein.png" alt="vlaamschereus haarlem thuisbezorgd"
                                 height="50" /></a>
                         </li>
+                        <li>
+                            "Als Thuisbezorgd niet levert voor 20:00, maak gerust gebruik van een andere bezorgdienst!"
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
