--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 height="50" /></a>
                         </li>
                         <li>
-                            "Als Thuisbezorgd niet levert voor 20:00, maak gerust gebruik van een andere bezorgdienst!"
+                            Als Thuisbezorgd niet levert voor 20:00, maak gerust gebruik van een andere bezorgdienst!
                         </li>
                     </ul>
                 </div>
